--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         let counterValue = 0;
 
         function openDiscord() {
-            window.open('https://discord.gg/122', '_blank');
+            window.open('https://discord.gg/122x', '_blank');
         }
 
         function handleFirstInteraction() {
